--- a/blog-theme/index.html
+++ b/blog-theme/index.html
@@ -13,7 +13,7 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     ></script>
-    <title>Tech People Blog</title>
+    <title>北京西海</title>
   </head>
   <body class="">
     <nav class="bg-gray-900 text-white">
@@ -87,7 +87,7 @@
       <div class="grid grid-cols-1 gap-5 lg:grid-cols-2">
         <div>
           <h1 class="text-5xl font-bold mt-4 mb-8 leading-tight xl:text-6xl">
-            Articles, Stories & Tutorials for Tech People
+            北京 | 城市 | 阅读 |地产 |正念
           </h1>
 
           <form id="search-form" class="flex items-center">
