--- a/blog-theme/index.html
+++ b/blog-theme/index.html
@@ -60,21 +60,21 @@
                 href="index.html"
                 class="block py-2 px-3 text-white rounded md:p-0 hover:text-indigo-400"
                 aria-current="page"
-                >Home</a
+                >回到主页</a
               >
             </li>
             <li>
               <a
                 href="articles.html"
                 class="block py-2 px-3 text-white rounded md:p-0 hover:text-indigo-400"
-                >All Articles</a
+                >所有文章</a
               >
             </li>
             <li>
               <a
                 href="about.html"
                 class="block py-2 px-3 text-white rounded md:p-0 hover:text-indigo-400"
-                >About</a
+                >关于我</a
               >
             </li>
           </ul>
