--- a/blog-theme/index.html
+++ b/blog-theme/index.html
@@ -13,7 +13,7 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     ></script>
-    <title>北京西海</title>
+    <title>homeeeeeee</title>
   </head>
   <body class="">
     <nav class="bg-gray-900 text-white">
