--- a/blog-theme/about.html
+++ b/blog-theme/about.html
@@ -24,7 +24,7 @@
           <img src="images/logo.png" class="h-14" alt="TechPeople Logo" />
           <span
             class="self-center text-2xl font-semibold whitespace-nowrap"
-            ><span class="text-indigo-400">Tech</span>People</span
+            ><span class="text-indigo-400">Tech</span>成员</span
           >
         </a>
         <button
