--- a/blog-theme/article.html
+++ b/blog-theme/article.html
@@ -13,7 +13,7 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     ></script>
-    <title>Tech People Blog</title>
+    <title>北京西海的博客</title>
   </head>
   <body>
     <nav class="bg-gray-900 text-white">
